@@ -1,2 +1,4 @@
 # ProyectoPooMysql
 Proyecto de curso - POO - 2024 - 1
+
+Para ejecutar la aplicaión integrada con Swing y JavaFX en NetBeans IDE 21, es necesario inlcuir el comando: --module-path "### ruta de lib de JavaFX" --add-modules javafx.controls,javafx.fxml,javafx.swing,javafx.graphics,javafx.base,javafx.web
